fixes for images on mobile

--- a/public/listing.scss
+++ b/public/listing.scss
@@ -78,8 +78,10 @@ h2 {
 		justify-content: center;
 		align-items: center;
 		margin-top: 1.5em;
+		line-height: 0;
 		img {
-			margin: 0.5rem;
+			padding: 0.5rem;
+			box-sizing: border-box;
 		}
 	}
 
